# yast-tftp-server

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  yast2-tftp-server.spec.in
.github/workflows/: ci.yml
agents/: etc_xinetd_d_tftp.scr
package/: yast2-tftp-server.changes  yast2-tftp-server.spec
src/: Makefile.am  TftpServer.ycp  dialogs.ycp  tftp-server.desktop  tftp-server.y2cc  tftp-server.ycp  tftp-server_auto.ycp  tftp-server_write.ycp  wizards.ycp
src/autoyast-rnc/: tftp-server.rnc  tftp-server.rng
src/clients/: tftp-server.rb  tftp-server.ycp  tftp-server_auto.rb
src/desktop/: org.opensuse.yast.TFTPServer.desktop  tftp-server.desktop
src/include/tftp-server/: dialogs.rb  wizards.rb
src/lib/cfa/: tftp_sysconfig.rb
src/modules/: TftpServer.rb  TftpServer.ycp
src/scrconf/: Makefile.am
test/: test_helper.rb  tftpserver_test.rb
test/cfa/: tftp_sysconfig_test.rb
testsuite/tests/: readwrite.out  readwrite.rb  readwrite.ycp
tftp-server/: .cvsignore  yast2-tftp-server.spec.in
tftp-server/agents/: etc_xinetd_d_tftp.scr
tftp-server/doc/autodocs/: Makefile.am
tftp-server/package/: yast2-tftp-server.changes
tftp-server/src/: Makefile.am  dialogs.ycp  tftp-server.ycp  tftp-server_auto.ycp  wizards.ycp
tftp-server/testsuite/tests/: readwrite.out
